# deresearcher-program

./: .gitignore  Cargo.toml  README.md  cicd.sh
js/: .solitarc.js  bun.lockb  package.json
js/idl/: deresearcher_program.json
js/tests/: integration.spec.ts  integration.test.ts
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
src/: entrypoint.rs  error.rs  ix.rs  lib.rs  processor.rs  state.rs
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-6wykyADHnufY28nrM2MQwiQ5oyepNzUsA7A6ERUGZjUH.tar.zst  snapshot-200-o9vbbXKAtdu3gQ3Gx6dDAjnWbv9fJzngvxTsi2pbiTa.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/accounts/snapshot/100/: 100.0
test-ledger/accounts/snapshot/200/: 0.2  12.1  200.3
test-ledger/rocksdb/: 000056.sst  000057.sst  000058.sst  000059.sst  000060.sst  000061.sst  IDENTITY  LOG  LOG.old.1727079714967508  MANIFEST-000063
test-ledger/snapshot/100/: 100  status_cache
test-ledger/snapshot/200/: 200  status_cache
