[package]
name = "deresearcher-program"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.1"
borsh-derive = "1.5.1"
shank = "0.4.2"
solana-program = "2.0.9"
thiserror = "1.0.63"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
